# customeroutreach

./: DEMO.md  README.md  final_outreach.md  initial_outreach.md  lead_profile.md  pyproject.toml  qa_report.md
agent_outputs_20250401_142539/: final_crew_result.txt
outputs_20250401_140556/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_141047/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_141629/: DEMO.md  final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_144455/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_144759/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_145211/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_145939/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_150824/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_151952/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_152342/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_153930/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_154409/: README.md  final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
outputs_20250401_160028/: final_outreach.md  initial_outreach.md  lead_profile.md  qa_report.md
src/customeroutreach/: crew.py  (+2 more)
(+14 files in other folders)
