[project]
name = "customeroutreach"
version = "0.1.0"
description = "CustomerOutreach using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
customeroutreach = "customeroutreach.main:run"
run_crew = "customeroutreach.main:run"
train = "customeroutreach.main:train"
replay = "customeroutreach.main:replay"
test = "customeroutreach.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
